<resources>
    <string name="app_name">Licenta</string>
    <string name="activity_login_login_btn">Log in</string>
    <string name="activity_login_no_account_tv">Don\'t have an account?</string>
    <string name="activity_login_sign_in_tv">Sign in</string>
    <string name="activity_login_email_et">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_sign_up_btn">Sign up!</string>
    <string name="activity_register_register_tv">Register</string>
    <string name="activity_register_confirm_password">Confirm password</string>
    <string name="activity_register_sign_up">Sign Up!</string>
    <string name="activity_register_height_et">Height</string>
    <string name="activity_register_weight_et">Weight</string>
    <string name="activity_register_first_name_et">First name</string>
    <string name="activity_register_last_name">Last name</string>
    <string name="unit_cm">cm</string>
    <string name="unit_feet">feet</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lbs">lbs</string>
    <string name="activity_register_date_of_birth">Date of birth</string>
    <string name="activity_register_gender">Gender</string>
    <string name="activity_register_invalid_email_error">Please enter a valid email</string>
    <string name="activity_register_error_password_invalid_length">The minimum password length is 8</string>
    <string name="activity_register_error_height_invalid">Invalid height entered</string>
    <string name="activity_register_error_weight_invalid">Invalid weight entered</string>
    <string name="activity_register_error_required_field">*Required</string>
    <string name="menu_bottom_main_home">Home</string>
    <string name="menu_main_bottom_find_gym">Find gym</string>
    <string name="menu_main_bottom_diary">Diary</string>
    <string name="menu_main_bottom_profile">Profile</string>
    <string name="activity_main_description_floating_action_button_add">Floating action button add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_profile_image_description_profile_picture">Profile picture</string>
    <string name="menu_fragment_profile_info_posts">Posts</string>
    <string name="menu_fragment_profile_info_goals">Goals</string>
    <string name="menu_fragment_profile_info_records">Records</string>
    <string name="menu_fragment_profile_info_followers">Connections</string>
    <string name="fragment_diary_calendar_before_btn">Previous day</string>
    <string name="fragment_diary_food_tab_btn">Food</string>
    <string name="fragment_diary_exercise_tab_btn">Exercise</string>
    <string name="fragment_diary_food_protein_tv">Protein</string>
    <string name="fragment_diary_food_carbs_tv">Carbs</string>
    <string name="fragment_diary_food_fat_tv">Fat</string>
    <string name="fragment_food_calories_remaining_tv">Calories remaining:</string>
    <string name="fragment_profile_add_food_btn">Add food</string>
    <string name="fragment_diary_exercise_add_exercise_btn">Add exercise</string>
    <string name="activity_exercise_search_for_exercises_et">Search for exercises</string>
    <string name="activity_food_search_for_food_til">Search for food</string>
    <string name="activity_add_food_scan_barcode_tv">Scan barcode</string>
    <string name="activity_register_dob_date_picker_title">Date of birth</string>
    <string name="activity_register_dob_date_picker_tag">datePickerOpened</string>
    <string name="register_activity_auth_exception_email_exists">The user with the specified email already exists</string>
    <string name="activity_set_goals_set_your_goals_tv">Set your goals!</string>
    <string name="activity_set_goals_your_height_tv">Your height:</string>
    <string name="activity_set_goals_your_weight_tv">Your weight:</string>
    <string name="activity_set_goals_protein_tv">Protein</string>
    <string name="activity_set_goals_carbs_tv">Carbs</string>
    <string name="activity_set_goals_fat_tv">Fat</string>
    <string name="activity_set_goals_calories_tv">Calories</string>
    <string name="activity_set_goals_save_goals_et">Save goals</string>
    <string name="activity_set_goals_i_want_to_tv">I want to:</string>
    <string name="activity_set_goals_lose_fat_tv">Lose fat</string>
    <string name="activity_set_goals_maintain_tv">Maintain</string>
    <string name="activity_set_goals_gain_weight_tv">Gain weight</string>
    <string name="activity_set_goals_my_activity_is_tv">My activity is:</string>
    <string name="activity_set_goals_sedentary_tv">Sedentary (little to no exercise)</string>
    <string name="activity_set_goals_light_tv">Light (3-5 times/week, light intensity)</string>
    <string name="activity_set_goals_moderate_tv">Moderate (3-5 times/week, moderate intensity)</string>
    <string name="activity_set_goals_high_intensity_tv">High intensity (4-6 times/week, high intensity)</string>
    <string name="activity_set_goals_very_high_intensity_tv">Very high intensity (6-7 times/week, very high intensity)</string>
    <string name="activity_set_goals_calculate_btn">Calculate!</string>
    <string name="menu_food_item_holder_kcal_tv">kcal</string>
    <string name="activity_food_info_quantity_tv">Quantity</string>
    <string name="unit_oz">oz</string>
    <string name="activity_register_food_save_btn">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="activity_register_food_carbs_g_tv">Carbs(g)</string>
    <string name="activity_register_food_fat_g_tv">Fat(g)</string>
    <string name="activity_register_food_protein_g_tv">Protein(g)</string>
    <string name="activity_register_food_name_et">Name</string>
    <string name="activity_register_food_please_add_tv">Please add food nutrients per 100g/3.5oz</string>
    <string name="activity_register_food_not_exists_tv">The food you scanned does not exist in our database. Please add it yourself!</string>
    <string name="activity_login_checking_your_credentials_tv">Checking your credentials...</string>
    <string name="unit_g">g</string>
    <string name="activity_food_info_100_grams">100</string>
    <string name="unit_km">km</string>
    <string name="unit_mi">mi</string>
    <string name="hint_exercise_sets">Sets</string>
    <string name="hint_exercise_reps">Reps</string>
    <string name="hint_exercise_weight">Weight</string>
    <string name="exercise_sets">Sets: </string>
    <string name="exercise_reps">Reps: </string>
    <string name="exercise_weight">Weight: </string>
    <string name="places_api_key">AIzaSyDHzT5Q-MNVFHmgnXfdo4Zqvp-av7Tk0Dk</string>
    <string name="button_edit">Edit</string>
    <string name="button_search_area">Search this area</string>
    <string name="menu_main_bottom_nearby_gyms">Nearby gyms</string>
    <string name="nav_drawer_open">Action bar opened</string>
    <string name="nav_drawer_close">Action bar closed</string>
    <string name="activity_set_goals_steps_tv">Steps</string>
    <string name="exercise_text_group">Group</string>
    <string name="exercise_text_name">Name</string>
    <string name="button_add">Add</string>
    <string name="button_add_custom">Add custom</string>
    <string name="add_food_text_search_by_barcode">Search by barcode</string>
    <string name="button_back">Back</string>
    <string name="button_save">Save</string>
    <string name="dialog_exercise_add_an_exercise_to_your_day">Add an exercise to your day</string>
    <string name="dialog_exercise_time">Time</string>
    <string name="dialog_exercise_distance">Distance</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="fragment_activity_your_activity">Your activity</string>
    <string name="fragment_activity_steps_walked">Steps walked</string>
    <string name="fragment_activity_kilometers_walked">Kilometers walked</string>
    <string name="fragment_activity_calories_burned">Calories burned</string>
    <string name="fragment_goals_update_goals">Update goals (leave empty if your weight remained unchanged)</string>
    <string name="button_update_goals">Update goals</string>
    <string name="button_log_out">Log out</string>
    <string name="custom_exercise_create_custom_text">Create your custom exercise</string>
    <string name="activity_loading_tv_checking_connection">Checking internet connection...</string>
    <string name="activity_loading_retrieving_user_text">Retrieving user data...</string>
    <string name="activity_loading_turn_on_connection">Please turn on your internet connection</string>
    <string name="button_add_meal">Add meal</string>
</resources>