<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_custom_exercise_main_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/app_padding_large"
    tools:context=".activity.diary.exercise.AddCustomExerciseActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_add_custom_exercise_group_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margin_medium"
        android:hint="@string/exercise_text_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_add_custom_exercise_group_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_add_custom_exercise_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margin_medium"
        android:hint="@string/exercise_text_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_add_custom_exercise_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_add_custom_exercise_cancel_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/activity_add_custom_exercise_save_btn"
            style="@style/App.Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/button_add" />

    </RelativeLayout>

</LinearLayout>