<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/app_padding_large">

    <TextView
        android:id="@+id/dialog_exercise_register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_exercise_add_an_exercise_to_your_day"
        android:textSize="@dimen/text_size_titles"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"/>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_exercise_group_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        >
        <AutoCompleteTextView
            android:id="@+id/dialog_exercise_group_actv"
            android:hint="@string/exercise_text_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_exercise_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        >

        <AutoCompleteTextView
            android:id="@+id/dialog_exercise_name_actv"
            android:hint="@string/exercise_text_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/dialog_exercise_weight_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_form_fields_margin_between"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:weightSum="7">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_exercise_weight_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/app_margin_small"
            android:layout_marginBottom="@dimen/login_form_fields_margin_between"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_exercise_weight_et"
                android:hint="@string/exercise_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/dialog_exercise_weight_tbg"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/dialog_exercise_g_rb"
                style="@style/Widget.App.Button.ToggleGroup.LeftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_g"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_button" />

            <Button
                android:id="@+id/dialog_exercise_lbs_rb"
                style="@style/Widget.App.Button.ToggleGroup.RightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_lbs"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_button" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_exercise_cardio_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/app_margin_medium"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_exercise_time_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_exercise_time"
            android:layout_marginBottom="@dimen/app_margin_medium"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_exercise_time_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/dialog_exercise_cardio_distance_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_form_fields_margin_between"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:visibility="visible"
            android:weightSum="7">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_exercise_distance_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/app_margin_small"
                android:layout_marginBottom="@dimen/login_form_fields_margin_between"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_exercise_distance_et"
                    android:hint="@string/dialog_exercise_distance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/dialog_exercise_distance_tbg"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/dialog_exercise_km_rb"
                    style="@style/Widget.App.Button.ToggleGroup.LeftButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_km"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_button" />

                <Button
                    android:id="@+id/dialog_exercise_mi_rb"
                    style="@style/Widget.App.Button.ToggleGroup.RightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_mi"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_button" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>